bug fix #2: search bar will not get cut off when viewed in small devices

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -418,6 +418,12 @@ footer .credit a {
         transform: scaleX(0.2);
     }
 
+    .navbar .search-form {
+        /* search box wont get cut off when viewed */
+        width: 90%;
+        right: 2rem;
+    }
+
     /* about */
     .about .row {
         flex-wrap: wrap;
